kubernetes/apps/vpn/prowlarr/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-health
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEntities:
        - host
        - health
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-vxlan
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pod-gateway
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-cilium-ingress
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEntities:
        - host
        - cluster
        - ingress
